public/stylesheets/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1.25;
  height: 100%;
  position: relative;
  padding-bottom: 1px;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after, 
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
button {
	/*border: none;*/
	color: inherit;
	background: none;
	cursor: pointer;
	outline: none;
	position: relative;
	text-align: center;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}
a {
  	text-decoration: none;
}

/* --------END RESETS--------- */

/* --------COLORS---------*/
/*  red: #ff6666;
	purple: #cc33ff;
	purple2: #9933ff;
	blue: #0099ff;
	green: #ecffcf;
	grey: #ebf2f2;
*/
	
@font-face {
	font-family:Monoxil;
	src: url('fonts/Monoxil_Regular.otf') format('otf');
}
body {
  	font-family: 'Lato', Helvetica, Arial, sans-serif;
	color: #444444;
}
::selection{
	background: #ecffcf;
}
h1 {
	font-size: 2rem;
	font-weight: bold;
}
h2 {
	font-size: 2rem;
}
h3 {
	font-size: 1.5rem;
	padding: 1rem;
}
.container {
	width: 100%;
	margin: 3.5rem auto;
	padding: 0;
	z-index: 1;
}
.main {
	padding: 1rem;
	margin: 0 auto;
	max-width: 1200px;
}
.main a {
	color: #444444;
}
.main a:hover {
	color: #0099ff;
}
.button {
	width: 100%;
	display: inline-block;
	margin: 0 0 1rem;
	padding: 1rem;
	background-color: #ffffff;
	color: #cc33ff;
	border: 2px solid #cc33ff;
	font-family: Monoxil, monospace;
	font-size: 1.25rem;
	text-align: center;
}
.button:hover {
	background-color: #cc33ff;
	color: #ffffff;
}
.plus, .minus {
	display: inline-block;
}
.hidden {
	display: none;
}

/*-------HEADER--------*/
header {
  	position:fixed;
  	top: 0;
  	left: 0;
  	right: 0;
  	z-index: 3;
  	height: 3.5rem;
  	background-color: #ffffff;
  	margin: 0 auto;
  	border-bottom: 3px solid #cc33ff;
}
header a{
	color: #222222;
	font-family: Monoxil, monospace;
}
.logo {
	float: left;
	padding: .35rem 1rem;
}
.navlink {
	float: right;
	padding: 1rem;
}
.navlink img{
	width: 1.5rem;
}
.add-box {
	background-color: #ebf2f2;
	position: absolute;
	top: 3.5rem;
	left:0;
	width: 100%;
	padding: 1rem 1rem 0;
	border-bottom: 3px solid #c6cdcd;
}

/*-------INDEX-------*/
.intro {
	text-align: center;
	width: 100%;
	margin: 0 auto;
	padding: 3rem 1rem 4rem;
	background-image: url('../images/yarnscraps1.jpg');
	background-position: center;
	background-color: #ebf2f2;
}
.highlight {
	color: #000000;
	background-color: rgba(236, 255, 207, .7);
	padding: 0 .3rem .2rem;
	line-height: 1.4;
}
.divider {
	color: #cc33ff;
	padding: 0 1rem;
}
.tab {
	color: #c6cdcd;
}
.tab img {
	width: 1rem;
	padding: 0 0 .1rem;
}
.patternfeed {
	display: -webkit-flex; /* Safari */
	-webkit-flex-wrap: wrap; /* Safari */
	-webkit-justify-content: space-between; /* Safari */  	
  	display: flex;
  	flex-wrap: wrap;
  	justify-content: space-between;
}
.patternfeed li {
	display: inline-block;
	width: 100%;
	padding: 1rem;
}
.patternfeed img{
	max-width: 100%;
	padding: 0 0 .5rem;
}

/*--------NEW PATTERN---------*/
form {
	padding:1rem 1rem 1rem 0;
	max-width: 500px;
}
.formtoggle  {
	width: 1rem;
}
form li{
	padding: 0 0 1rem;
}
label {
	padding: 0 1rem 0 0;
}
input[type=text], textarea {
	width: 99%;
	margin: .5rem 0 0;
	padding: .5rem .5rem .7rem;
	font-family: inherit;
	font-size: inherit;
	border: 1px solid #dddddd;
}
input[type=radio] {
	visibility: hidden;
	float: right;
}
.yarn label:hover {
	color: #ff6666;
	background-color: #ecffcf;
	cursor: pointer;
}
.needle label:hover {
	color: #ff6666;
	background-color: #ecffcf;
	cursor: pointer;
}
input[type=radio]:checked + label{
	color: #ff6666;
	background-color: #ecffcf;
	font-weight: bold;
}
.hint {
	font-size: .8rem;
	color: #aaaaaa;
}
.radiolist {
	padding: 1rem 0 0;
}
#y2 {
	height:5px;
}
#y4 {
	height:9px;
}
#y5 {
	height:12px;
}
#y8 {
	height:18px;
}
#y10 {
	height:24px;
}
#y12 {
	height:28px;
}
#y2, #y4, #y5, #y8, #y10, #y12 {
	width: 200px;
	margin: 0 0 .25rem;
}
#n5 {
	height:14px;
}
#n6 {
	height:15px;
}
#n7 {
	height:17px;
}
#n8 {
	height:20px;
}
#n9 {
	height:22px;
}
#n10 {
	height:24px;
}
#n11 {
	height:30px;
}
#n13 {
	height:34px;
}
#n5, #n6, #n7, #n8, #n9, #n10, #n11, #n13 {
	width: 200px;
	margin: 0 0 .25rem;
}

/*--------MEDIA QUERIES--------*/
@media screen and (min-width: 612px){
	.add-box {
		padding: 0 1rem 0;
	}
	.add-box .button {
		width: 47%;
		margin: 1rem 1.5%;
	}
	.intro {
		padding: 6rem 1rem 7rem;

	}
	.patternfeed li {
		display: inline-block;
		width: 50%;
		padding: 1rem;
	}
}
@media screen and (min-width: 900px){
	.add-box {
		padding: 0 1rem 0;
	}
	.add-box .button {
		max-width: 300px;
		margin: 1rem;
		float: right;
	}
	.patternfeed li {
		width: 33.33333%;
	}
}
@media screen and (min-width: 1024px){
	.patternfeed li {
		width: 25%;
	}
	header {
		height: 4rem;
	}
	.logo {
		padding: .5rem 1rem;
	}
	header .plus {
		display: none;
	}
	.add-box {
		display: block;
		top: 0;
		background-color: transparent;
		border: none;
		padding: 0;
		margin: 0;
	}
	.add-box .button {
		padding: .6rem 1rem .4rem;
		margin: .5rem 1rem 0;
		font-size: 1.25rem;
		width: 27%;
	}
}

